# serializer version: 1
# name: test_eg_size1
  dict({
    '@': 100.0,
  })
# ---
# name: test_eg_size2
  dict({
    'A_': 100.0,
  })
# ---
# name: test_eg_size3
  dict({
    'BW': 96.8680832226649,
    'Bw': 3.131916777335104,
  })
# ---
# name: test_eg_size4
  dict({
    'CF': 61.272787173292336,
    'CN': 4.104044429104829,
    'CR': 33.48969282419755,
    'C^': 0.29180132408772863,
    'Cr': 0.7914718709798877,
    'C~': 0.05020237833767375,
  })
# ---
